--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 2.8.12)
 project(sick_safetyscanners_base CXX)
+set(CMAKE_CXX_STANDARD 11)
 
-# Use C++11 add_definitions(-std=c++11 -Wall) By adding -Wall and -Werror, the
-# compiler does not ignore warnings anymore, enforcing cleaner code.
-add_definitions(-std=c++11 -Wall -Werror)
+# By adding -Wall and -Werror, the compiler does not ignore warnings anymore,
+# enforcing cleaner code.
+add_definitions(-Wall -Werror)
 
 # Find system libraries
 find_package(Boost REQUIRED COMPONENTS system thread chrono)
