--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,19 @@ cmake_minimum_required(VERSION 2.8.12)
 project(sick_safetyscanners_base CXX)
 set(CMAKE_CXX_STANDARD 11)
 
-# By adding -Wall and -Werror, the compiler does not ignore warnings anymore,
-# enforcing cleaner code.
-if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-  # Currently the code does not work without warnings when we use Clang/LLVM: -
-  # https://github.com/SICKAG/sick_safetyscanners_base/issues/9
-  add_definitions(-Wall)
-else(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-  add_definitions(-Wall -Werror)
-endif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+if(CMAKE_GENERATOR MATCHES "Visual Studio")
+  add_definitions(-D_WIN32_WINNT=0x0601) # Target Windows 7 and later
+else(CMAKE_GENERATOR MATCHES "Visual Studio")
+  # By adding -Wall and -Werror, the compiler does not ignore warnings anymore,
+  # enforcing cleaner code.
+  if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    # Currently the code does not work without warnings when we use Clang/LLVM:
+    # - https://github.com/SICKAG/sick_safetyscanners_base/issues/9
+    add_definitions(-Wall)
+  else(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    add_definitions(-Wall -Werror)
+  endif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+endif(CMAKE_GENERATOR MATCHES "Visual Studio")
 
 ## Find system libraries
 find_package(Boost REQUIRED COMPONENTS system thread chrono)
@@ -121,9 +125,12 @@ add_library(sick_safetyscanners_base SHARED
   src/datastructure/UserName.cpp
 )
 
-target_compile_options(sick_safetyscanners_base
-  PUBLIC ${CXX11_FLAG}
-  PRIVATE -Wall)
+if(NOT (CMAKE_GENERATOR MATCHES "Visual Studio"))
+  target_compile_options(
+    sick_safetyscanners_base
+    PUBLIC ${CXX11_FLAG}
+    PRIVATE -Wall)
+endif(NOT (CMAKE_GENERATOR MATCHES "Visual Studio"))
 
 option(USE_ROS_LOGGING "Use ROS Logging instead of printf" OFF)
 
