--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,8 +146,9 @@ target_include_directories(sick_safetyscanners_base PUBLIC
   ${Boost_INCLUDE_DIR}
   )
 
-target_link_libraries(sick_safetyscanners_base PUBLIC ${Boost_LIBRARIES}
-)
+target_link_libraries(
+  sick_safetyscanners_base PUBLIC Boost::system Boost::thread Boost::chrono
+                                  Boost::dynamic_linking)
 
 add_library(sick_safetyscanners_base::sick_safetyscanners_base ALIAS sick_safetyscanners_base)
 
